--- a/_config.yml
+++ b/_config.yml
@@ -95,10 +95,10 @@ theme_mode: # [light | dark]
 # will be added to all media resources (site avatar, posts' images, audio and video files) paths starting with '/'
 #
 # e.g. 'https://cdn.com'
-cdn: "https://cdn.jsdelivr.net/gh/Elis420/elis420.github.io"
+cdn: ""
 
 # the avatar on sidebar, support local or CORS resources
-avatar: "assets/img/avatar/avatar.png"
+avatar: "https://cdn.jsdelivr.net/gh/Elis420/elis420.github.io/assets/img/avatar/avatar.png"
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
