--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ title: Elis Cazacu # the main title
 tagline: Cloud Support Engineer # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Elis Cazacu – Cloud Support Engineer portfolio. Showcasing expertise in Microsoft Azure, cloud infrastructure, and IT support solutions. Explore projects, certifications, and technical skills in cloud computing.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
