--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ timezone: Europe/Bucharest
 
 title: Elis Cazacu # the main title
 
-tagline: Cloud Support Engineer # it will display as the subtitle
+tagline: Cloud Security Engineer # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  Elis Cazacu – Cloud Support Engineer portfolio. Showcasing expertise in Microsoft Azure, cloud infrastructure, and IT support solutions. Explore projects, certifications, and technical skills in cloud computing.
+  Elis Cazacu – Cloud Security Engineer portfolio. Showcasing expertise in AWS, cloud infrastructure and security, and IT support solutions. Explore projects, certifications, and technical skills in cloud computing.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
